# agf-sovereign-nexus

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  lazarus-check.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ca-lazarus-brief-apbf6vkaji2vw-AutoDeployTrigger-d7629af9-d922-4e2b-b13b-5bc9c5a844ac.yml  cd-production.yml
deployment/: main.bicep  parameters.production.json  verify-production.sh
lazarus_core/: cli.py
schemas/: lazarus_artifact.schema.json  omega_executive_summary.schema.json
src/lazarus_core/: __init__.py
templates/briefs/: brief_A_microsoft_strategic.md.j2  brief_B_lighthouse_clinical.md.j2  brief_C_investor_seriesA.md.j2
