[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazarus-omega-brief"
version = "1.0.0"
description = "AI governance brief generation pipeline"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.2",
    "azure-identity>=1.15.0",
    "azure-keyvault-keys>=4.9.0",
]

[project.scripts]
lazarus-omega-brief = "lazarus_core.cli:cli"
